# soundtank

./: .cvsignore  .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.in  README  bootstrap  config.h.in  configure  configure.ac
autom4te.cache/: output.0  requests  traces.0
doc/: about-rtpath-framework.txt  about-soundtank.txt  source-code-overview.txt  tutorial.txt
example/: basic-instrument  plate-inst  plate-inst-distortion  reverb-inst
src/: .cvsignore  Makefile.am  Makefile.in  TODO.txt  buffer.c  buffer.h  channel.c  channel.h  control.c  control.h  data_port.c  data_port.h  engine.c  engine.h  engine_alsa.c  engine_jack.c  include.h  journal.txt  process.c  process.h  rtobject.c  rtobject.h  rtobject2.h  rtobject_instance.c  rtobject_instance.h  soundtank.c  soundtank.h  soundtank_rtobject_xml_v1.0.dtd  soundtank_startup.c  soundtank_startup.h  soundtank_structs.h  soundtank_types.c  soundtank_types.h  xml_file.c  xml_file.h
src/commands/: at.c  at.c.~1.10.~  cd.c  commands.c  commands.h  cr.c  debug.c  engine_commands.c  ls.c  map.c  mv.c  set.c  set.c.~1.21.~  stat.c  sv.c
src/event_map/: auto_map.c  event_map.c  event_map.h  map_action.c  map_action.h  map_test.c  map_test.h  rt_route_ev.c  scale.c  scale.h
src/event_map/actions/: action_callbacks.c  action_callbacks.h  jump.c  jump.c.~1.5.~  note_to_pitch.c  set_control.c  set_note_flag.c
src/event_map/actions/CVS/: Entries  Repository  Root
src/event_map/tests/: test_callbacks.c  test_callbacks.h  test_event_param_in_range.c  test_event_type.c  test_print_event_type.c  test_true.c
src/event_map/tests/CVS/: Entries  Repository
src/imp_objects/: alsa_extern.c  alsa_extern.h  audio_file.c  channel_ops.c  channel_ops.h  imp_objects.c  imp_objects.h  jack_extern.c  jack_extern.h  ladspa_default.c  ladspa_listplugins.c  ladspa_load.c  ladspa_plugin.c  ladspa_plugin.h  ladspa_search.c  ladspa_utils.h  local_in_and_out.c  local_in_and_out.h  signal_path.c  signal_path.h  test_source.c  test_source.h
src/util/: generic_array.c  generic_array.h  generic_array_test.c  linked_list.c  linked_list.h  linked_list_test.c  namespace.c  namespace.h  string_to_argv.c  string_to_argv.h
